Version 1.7.10+svn:
 * Language and i18n:
   * Updated translations: Chinese (Simplified), Estonian, French, Latvian,
     Portuguese (Brazil), Russian, Serbian, Slovak, Spanish
 * User interface:
   * Add a new repeating button widget
   * Scrollbar buttons now keep scrolling when kept pressed down
   * Optimized the speed of the --new-widgets game load dialog
 * WML Engine:
   * Rework of semantics of [unit] tags. Added 'placement' attribute.
     Fix bugs #14373, #14444, #14451 and other 'duplicated unit' issues in LoW
 * Miscellaneous and bugfixes:
   * Scrollbar containers now use the button super class
   * Allow a gui2 timer delete itself in its callback
   * Fix various bugs when a unit has more MP than its maximum
   * Fix not redrawing a grid when set to hidden
   * Add helper functions to show/hide rows in a listbox

Version 1.7.10-1.8beta3:
 * Campaigns:
   * Under the Burning Suns:
     * Fix locations of some items in "In the domain of the dwarves"
       (bug #14925)
 * Graphics:
   * Added attack icon for Drake Ram attack, and for UtBS's Giant Ant.
 * Language and i18n:
   * Updated translations: French, German, Hungarian, Italian, Latvian,
     Lithuanian, Polish, Portuguese (Brazil), Russian, Serbian, Slovak
 * User interface:
   * Don't reserve space for scrollbars in message dialogs
   * Ctrl-f for fullscreen works again in the MP lobby (bug #14759)
   * Resizing the MP lobby no longer crashes randomly
 * WML Engine:
   * Fix bug #14859: [time_area] created by event are not saved
   * Allow modifications to change unit ellipse
 * Miscellaneous and bugfixes:
   * Add a minimap cache for gui2
   * Add a new super class for the button
   * Added a new gui2 timer engine
   * Add hotkey support for gui2
   * Change Drake Flare and Flameheart weapon names to match new weapons
   * Converted the hover tooltips to use the new timer engine
   * Fix bug #14865: move+attack into hex with ambusher causes crash