@@ -137,6 +137,12 @@ tt.literal, code.literal {
   padding: 0.5em 1em;
 }
 
+.guimenu, .guimenuitem, .guisubmenu, .guilabel, .guibutton {
+    font-style: normal;
+    font-weight: bold;
+    color: black;
+}
+
 div.sidebar {
   background: #ffffee;
   margin: 1.0em 10% 0.5em 0;
